# rag-demo

./: .gitignore  .ingested_checksums  .ingestion_stats.json  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
dashboard/: app-demo.js  app.js  index.html
docs/: README.md  ai_agent_instructions.md  index.html  learnings.md  multi-collection-guide.md  qdrant-rag-setup.md  style.css
documentation/: emacs-babel-init.el  learnings.md  literate.org  ollama-rag-example.md  quick-start.md  research.md  usage-examples.md  war-and-peace-rag-demo.md  worked-example.md
scripts/: benchmark-queries.sh  build-all.sh  build-dashboard.sh  build-demo.sh  concat-source-files.sh  export-collection.sh  health-check.sh  hybrid-search.sh  import-collection.sh  ingest-all-by-directory.sh  ingest-all-pdfs.sh  ingest-by-directory.sh  ingest-javascript-books.sh  ingest-pdf-smart.sh  ingest-pdf.sh  ingest-python-books.sh  ingestion-status.sh  interactive-rag.sh  pdf-to-markdown.sh  qdrant-stats.sh  query-rag-2pass.sh  query-rag-adjacent.sh  query-rag-characters.sh  query-rag-multipass.sh  query-rag.sh  reset-qdrant.sh  serve-dashboard.sh  setup-collection.sh  setup-qdrant.sh  strip-gutenberg.sh  update-collection-alias.sh  verify-collections.sh  verify-ingestion.sh
src/: export_collection.rs  hybrid_search.rs  import_collection.rs  ingest_by_directory.rs  ingest_hierarchical.rs  ingest_markdown.rs  ingest_markdown_multi.rs  lib.rs  main.rs  pdf_to_embeddings.rs  search_hierarchical.rs  search_qdrant.rs
wiki/: Architecture-Overview.md  Chunking-Strategies.md  Data-Flow-Diagrams.md  Database-Schema.md  Deployment-Architecture.md  Home.md  README.md  Rust-Components.md
