[package]
name = "rag-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pdf-extract = "0.7"
uuid = { version = "1.10", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "pdf-to-embeddings"
path = "src/pdf_to_embeddings.rs"

[[bin]]
name = "search-qdrant"
path = "src/search_qdrant.rs"

[[bin]]
name = "ingest-markdown"
path = "src/ingest_markdown.rs"

[[bin]]
name = "ingest-markdown-multi"
path = "src/ingest_markdown_multi.rs"

[[bin]]
name = "ingest-hierarchical"
path = "src/ingest_hierarchical.rs"

[[bin]]
name = "search-hierarchical"
path = "src/search_hierarchical.rs"

[[bin]]
name = "ingest-by-directory"
path = "src/ingest_by_directory.rs"

[[bin]]
name = "export-collection"
path = "src/export_collection.rs"

[[bin]]
name = "import-collection"
path = "src/import_collection.rs"
